# ai-routing-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  README_en.md  README_ru.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: __init__.py
data/collectors/: __init__.py  quic_test_collector.py
data/pipelines/: __init__.py  data_pipeline.py
docs/: QUIC_TEST_INTEGRATION_RU.md  README.md
docs/architecture/: ARCHITECTURE.md  INTEGRATION_GUIDE.md
docs/development/: ADAPTATION_NOTES.md  ADAPTATION_STATUS.md  UPGRADE_SUMMARY.md
docs/guides/: CONTRIBUTING.md  USAGE_EXAMPLES.md
docs/labs/: CAI_INTEGRATION.md
evaluation/: __init__.py  model_evaluator.py
examples/: cai_integration.py
experiments/: README.md  example_experiment.py  lab_experiment.py  latency_jitter_experiment.py
inference/: __init__.py  predictor_service.py
labs/: README.md  __init__.py  lab_ai_monitoring.py  lab_ai_routing.py  lab_autonomous_vpn.py  lab_ml_security.py  lab_orchestrator.py  lab_quic_testing.py
labs/tools/: cai_masque_tools.py  cai_quic_tools.py  masque_client.py  quic_runner.py
models/: README.md  __init__.py
models/anomaly/: __init__.py  anomaly_ensemble.py  isolation_forest.py  lstm_autoencoder.py  one_class_svm.py
models/core/: __init__.py  data_preprocessor.py  feature_extractor.py  model_registry.py  model_validator.py
models/monitoring/: __init__.py  drift_detector.py  model_monitor.py  retraining_orchestrator.py
models/prediction/: __init__.py  arima_model.py  jitter_predictor.py  latency_predictor.py  load_ensemble.py  lstm_forecast.py  prophet_model.py  random_forest_load.py  route_prediction_ensemble.py
models/routing/: __init__.py  multi_armed_bandit.py  neural_network_route.py  q_learning_route.py  random_forest_route.py  route_ensemble.py
monitoring/: prometheus.yml
reports/: README.md
reports/2025/11/v1.0/: README.md
reports/2025/11/v1.1/: README.md
reports/templates/: experiment_report.md  test_report.md
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_predictor_service.py  test_quic_test_integration.py
tests/unit/: test_anomaly_ensemble.py  test_arima_model.py  test_data_preprocessor.py  test_drift_detector.py  test_feature_extractor.py  test_isolation_forest.py  test_jitter_predictor.py  test_latency_predictor.py  test_load_ensemble.py  test_model_monitor.py  test_model_registry.py  test_model_validator.py  test_multi_armed_bandit.py  test_neural_network_route.py  test_predictor_service.py  test_prophet_model.py  test_q_learning_route.py  test_quic_test_collector.py  test_random_forest_load.py  test_random_forest_route.py  test_retraining_orchestrator.py  test_route_ensemble.py
training/: __init__.py  train_jitter_model.py  train_latency_model.py
